airflow/logs/python_operator/print/2022-03-27T16:44:17.027522+00:00/1.log
[2022-03-27 11:44:23,180] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: python_operator.print manual__2022-03-27T16:44:17.027522+00:00 [queued]>
[2022-03-27 11:44:23,188] {taskinstance.py:1037} INFO - Dependencies all met for <TaskInstance: python_operator.print manual__2022-03-27T16:44:17.027522+00:00 [queued]>
[2022-03-27 11:44:23,189] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2022-03-27 11:44:23,189] {taskinstance.py:1244} INFO - Starting attempt 1 of 1
[2022-03-27 11:44:23,189] {taskinstance.py:1245} INFO - 
--------------------------------------------------------------------------------
[2022-03-27 11:44:23,362] {taskinstance.py:1264} INFO - Executing <Task(PythonOperator): print> on 2022-03-27 16:44:17.027522+00:00
[2022-03-27 11:44:23,366] {standard_task_runner.py:52} INFO - Started process 10270 to run task
[2022-03-27 11:44:23,370] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'python_operator', 'print', 'manual__2022-03-27T16:44:17.027522+00:00', '--job-id', '138', '--raw', '--subdir', 'DAGS_FOLDER/etl_python_operator.py', '--cfg-path', '/tmp/tmp3xqxvsoz', '--error-file', '/tmp/tmp5vxvyzqw']
[2022-03-27 11:44:23,371] {standard_task_runner.py:77} INFO - Job 138: Subtask print
[2022-03-27 11:44:23,717] {logging_mixin.py:109} INFO - Running <TaskInstance: python_operator.print manual__2022-03-27T16:44:17.027522+00:00 [running]> on host LAPTOP-5HJG55H7.localdomain
[2022-03-27 11:44:24,053] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=airflow
AIRFLOW_CTX_DAG_ID=python_operator
AIRFLOW_CTX_TASK_ID=print
AIRFLOW_CTX_EXECUTION_DATE=2022-03-27T16:44:17.027522+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-03-27T16:44:17.027522+00:00
[2022-03-27 11:44:24,058] {base.py:70} INFO - Using connection to: id: airflow-universities. Host: training-main.cghe7e6sfljt.us-east-1.rds.amazonaws.com, Port: 5432, Schema: training, Login: alkymer, Password: ***, extra: {}
[2022-03-27 11:44:24,708] {dbapi.py:225} INFO - Running statement: /home/lowenhard/airflow/include/universidad_del_cine.sql, parameters: None
[2022-03-27 11:44:24,847] {taskinstance.py:1718} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/lowenhard/airflow/dags/etl_python_operator.py", line 50, in test1
    data = sql_query.execute({})
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "/"
LINE 1: /home/lowenhard/airflow/include/universidad_del_cine.sql
        ^

[2022-03-27 11:44:24,854] {taskinstance.py:1272} INFO - Marking task as FAILED. dag_id=python_operator, task_id=print, execution_date=20220327T164417, start_date=20220327T164423, end_date=20220327T164424
[2022-03-27 11:44:26,508] {standard_task_runner.py:89} ERROR - Failed to execute job 138 for task print
Traceback (most recent call last):
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 298, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/cli/commands/task_command.py", line 180, in _run_raw_task
    ti._run_raw_task(
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1334, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1460, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 1516, in _execute_task
    result = execute_callable(context=context)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/operators/python.py", line 174, in execute
    return_value = self.execute_callable()
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/operators/python.py", line 188, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/lowenhard/airflow/dags/etl_python_operator.py", line 50, in test1
    data = sql_query.execute({})
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/providers/postgres/operators/postgres.py", line 71, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/lowenhard/acceleration/env/lib/python3.8/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "/"
LINE 1: /home/lowenhard/airflow/include/universidad_del_cine.sql
        ^

[2022-03-27 11:44:26,522] {local_task_job.py:154} INFO - Task exited with return code 1
[2022-03-27 11:44:26,731] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
